# star

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  toolchain_ubuntu_mingw64.cmake
src/apps/: CMakeLists.txt
src/apps/rbm/: CMakeLists.txt
src/apps/rbm/src/: dbn.h  demo.cc  inner.h
src/apps/schedule/: CMakeLists.txt
src/apps/schedule/data/data_11/: DH.txt  S.txt  config.txt
src/apps/schedule/data/data_book_01/: book_DH.txt  book_S.txt
src/apps/schedule/data/data_book_DH/: book_DH.txt  book_S.txt  book_config.txt
src/apps/schedule/data/data_book_df/: book_DH.txt  book_S.txt
src/apps/schedule/data/data_book_exercise/: book_DH.txt  book_S.txt
src/apps/schedule/data/data_convert/: config.txt  trips080A01.txt  trips080A01_convert.txt
src/apps/schedule/data/data_paper/: paper_DH.txt  paper_S.txt  paper_config.txt
src/apps/schedule/doc/: max_flow.md
src/apps/schedule/draw/: matlab_plot_df.txt
src/apps/schedule/src/: Schedule.cc  Schedule.h  files.h  generate_net.cc  generate_net.h  inner.h  main.cc  network_flow.cc  network_flow.h  parse.cc  parse.h  schedule_process.cc  schedule_process.h  time.cc  time.h  tools.cc  tools.h
src/apps/sky/: CMakeLists.txt
src/apps/sky/docs/: config.txt  jpg2png  release.txt  rlbook.txt
src/apps/sky/src/: CMakeLists.txt  inner.h  sky.cc  sky.h  sky.txt
src/examples/: CMakeLists.txt  inner.h  main.cc  test.h  test_cnn_mnist.cc
src/includes/: star.h  star_c.h  star_feature_config.h
src/modules/: CMakeLists.txt
src/modules/config/: files.h  files_c.h  inner.h  inner_c.h
src/modules/core/: core.cc  core.h  inner.h  inner_cc.h  wrapper.cc  wrapper.h
src/modules/data/: data.cc  data_c.h  files.h  files_c.h  inner_c.h
src/modules/files/: CMakeLists.txt  asprintf.c  asprintf.h  config_parser.cc  config_parser.h  io_test.cc  io_test.h
src/modules/io/: files.h  inner.h  lifile.cc  lifile.h  listring.cc  listring.h
src/modules/io/common/: Android.mk  CMakeLists.txt  MakeTable.cxx  files.h  liCommon.h  liCommonInner.h  lialgo.c  lialgo.h  lialgo_inner.h  liconst.c  liconst.h  licstd.h  lifile.c  lifile.h  lifile_export.h  liheader.h  liheader_private.h  liheader_public.h  lijni.c  lijni.h  limacro.h  limacro_private.h  limacro_public.h  listring.c  listring.h  listring_export.h  litest.c  litest.h  liutil.c  liutil.h  month.c  month.h  native-lib.cc  opencv2.h  opencv_helper.h  subdir.mk  xjopencv_helper.h
src/modules/ml/: files.h  files_c.h  inner.h  kmean.cc  kmean.h
src/modules/ml/dl/: detect.cc  detect.h  files_c.h  rnn.cc  rnn.h
src/modules/ml/rl/: book.cc  book.h  files.h
src/modules/parser/: data_parser.cc  data_parser.h  draw.cc  draw.h  draw_curve.cc  draw_curve.h  files.h  files_c.h  inner.h
src/modules/parser/bmp_parser/: io_bmp.cc  io_bmp.h
src/modules/parser/csv_like_parser/: csv_like_parser.cc  csv_like_parser.h  files.h  inner.h
src/modules/parser/image/: files.h  files_c.h  image.cc  image.h  image_c.h  image_impl  inner_c.h  mat2img.cc  mat2img.h  mat2img_impl
src/modules/parser/jpeg_parser/: io_jpeg.c  io_jpeg.h
src/modules/parser/mnist/: files.h  mnist_parser.cc  mnist_parser.h
src/modules/parser/png_parser/: io_png.c  io_png.h
src/modules/parser/yuv_parser/: io_yuv.cc  io_yuv.h  yuv2rgb.cc  yuv2rgb.h
src/modules/util/: XjIoHelper.cc  XjIoHelper.h  file.cc  file.h  file_io.cc  file_io.h  files.h  inner.h  nn_error.h  star_string.cc  star_string.h  util.cc  util.h
